# 42cursus-libft

./: .test_main.c  .tests.h  CMakeLists.txt  CMakePresets.json  Makefile  README.md
docs/: README.md  STRING.md
include/: libft.h
src/: ft_atoi.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_striteri.c  ft_strtrim.c  ft_tolower.c  ft_toupper.c
tests/: .test_main.c  .tests.c
